Placate exception check validation below convertVariadicArguments(). https://bugs.webkit.org/show_bug.cgi?id=224027 rdar://68912995

Reviewed by Saam Barati.

Source/WebCore:

Test: js/dom/missing-exception-check-in-convertVariadicArguments.html

* bindings/js/JSDOMConvertVariadic.h:
(WebCore::convertVariadicArguments):

LayoutTests:

* js/dom/missing-exception-check-in-convertVariadicArguments-expected.txt: Added.
* js/dom/missing-exception-check-in-convertVariadicArguments.html: Added.



git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275324 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Canonical link: https://commits.webkit.org/236000@main